<resources>
    <string name="All_Apps">Apps</string>
    <string name="All_Channels">Channels</string>
    <string name="Back">Back</string>
    <string name="CH">CH</string>
    <string name="Channels">Channels</string>
    <string name="Click">Click</string>
    <string name="Gallery">Gallery</string>
    <string name="Input">Input</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="TV">TV</string>
    <string name="Tv_Ch">Tv CH</string>
    <string name="Tv_Vol">Tv Vol</string>
    <string name="VOL">VOL</string>
    <string name="Yes">Yes</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_section">About</string>
    <string name="action_bar_title_about">About Remote Control</string>
    <string name="action_bar_title_connected_to">Connected to %1$s</string>
    <string name="action_bar_title_connecting">Connecting…</string>
    <string name="action_bar_title_default">CodeMatics SONY Remote Control</string>
    <string name="action_bar_title_no_devices">Remote not connected</string>
    <string name="action_bar_title_no_wifi">Not connected</string>
    <string name="action_bar_title_pairing_with">Pairing with %1$s</string>
    <string name="action_bar_title_select">Connect to Sony Android TV</string>
    <string name="action_connect">Connect</string>
    <string name="action_connect_wifi">Connect to Wi‑Fi</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_enable_wifi">Turn on Wi‑Fi</string>
    <string name="action_settings">Settings</string>
    <string name="action_string_back_to_remote">Go Back</string>
    <string name="action_string_connection">Connection</string>
    <string name="action_string_keyboard">Keyboard</string>
    <string name="action_string_layout_dpad">D-Pad</string>
    <string name="action_string_layout_gamepad">Gamepad</string>
    <string name="action_string_layout_trackpad">Trackpad</string>
    <string name="action_string_refresh">Refresh</string>
    <string name="action_string_settingxs">Settings</string>
    <string name="ad_attribution">Ad</string>
    <string name="adaptive_banner_ad_unit_id">ca-app-pub-1653520825495345/9214253652</string>
    <string name="appName">CodeMatics Android Smart Remote</string>
    <string name="app_list_wifi">All Apps</string>
    <string name="app_name">Universal TV Remote</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_unit_id">ca-app-pub-1653520825495345/2637471719</string>
    <string name="banner_ad_unit_id_android">ca-app-pub-1653520825495345/2055065938</string>
    <string name="banner_ad_unit_id_sony">ca-app-pub-1653520825495345/9214253652</string>
    <string name="banner_ad_unit_id_wifi">ca-app-pub-1653520825495345/1589259710</string>
    <string name="black_theme">Default Theme</string>
    <string name="black_theme_ad">ca-app-pub-1653520825495345/4596679316</string>
    <string name="black_theme_ad_wifi">ca-app-pub-1653520825495345/4695673312</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="channel_list_wifi">All Tv Channels</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choco_theme">Chocolate Theme</string>
    <string name="choco_theme_ad">ca-app-pub-1653520825495345/4874050911</string>
    <string name="choco_theme_ad_wifi">ca-app-pub-1653520825495345/1543730519</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_remote_control">Exit App</string>
    <string name="com.crashlytics.android.build_id">136c841d6fef44f4a108661eba1747e2</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_sdk_connection_failed">Enter pairing code displayed on TV</string>
    <string name="connect_sdk_pairing_pin_prompt_tv">Enter pairing code displayed on TV</string>
    <string name="connect_sdk_pairing_simple_prompt_tv">Confirm pairing on the TV</string>
    <string name="connect_sdk_pairing_simple_title_tv">Pairing request</string>
    <string name="consent_1">We care about your Privacy and Data security. Showing Ads help us to keep this app free for our respected users.</string>
    <string name="consent_2">For EU GDPR complaince, Can Ad Providers use your Data to show Tailored Ads in this app that are relevant to you?</string>
    <string name="consent_3">You can change your choice any time from within the app. Our Ad partners will collect Data and use a unique identifier on your device to show Ads</string>
    <string name="consent_4">Yes, continue to see relevant Ads</string>
    <string name="consent_5">No, see ads that are less relevant</string>
    <string name="consent_6">Pay for Ads-Free version</string>
    <string name="customer_support_rating">Customer Support</string>
    <string name="first_screen_text"><b>NEW:</b>" 
"<b>—</b>> <b>SONY Android SMART TV </b>"remote control has been made available. 

"<b>—</b>> The<b> SMART TV / Device</b> and your <b>Mobile Device</b>" must be connected to the same WiFi or Ethernet Network. 

"<b>—</b>> Traditional <b>IR</b>" TVs requires the built-in Infrared (IR) feature in your mobile device. 

"<b>—</b>> The <b>IR</b>" feature is required to send signals from the mobile device to your TV set, allowing it to function as a normal TV Remote Control. 

"<b>—</b>> If the app does not work on your mobile device or your TV model is not available, kindly contact our <b>Customer Support</b>. We will feel very happy guide you properly.</string>
    <string name="grey_theme">Grey Theme</string>
    <string name="layout_first_second__requirements">I dont understand the requirements of the App</string>
    <string name="layout_first_second__requirements_button">App Requirements</string>
    <string name="layout_first_second_ir_explained">IR is a built-in mobile feature that is required to send signals from the mobile device to your TV set, allowing it to function as a normal TV Remote Control.</string>
    <string name="layout_first_second_ir_unavailable">What is IR?</string>
    <string name="layout_first_second_other">Other reasons</string>
    <string name="layout_first_second_other_explained">Please brief us about the issues you experienced. We will try our very best to improve your experience of the app</string>
    <string name="layout_first_second_submit">Submit</string>
    <string name="layout_first_second_text">We regret the inconvenience. Kindly let us know what issue you experienced. We will guide you.</string>
    <string name="layout_first_second_tv_not_available">My TV brand was not available</string>
    <string name="layout_first_second_tv_not_available_hint">Kindly enter your TV brand / Model here. We will try our very best to make it available soon.</string>
    <string name="layout_third_hint">Please enter some feedback</string>
    <string name="layout_third_text">Thank you for your feedback. Please let us know how we can improve your experience</string>
    <string name="pairing_cancel">Cancel</string>
    <string name="pairing_explanation">Enter Code below</string>
    <string name="pairing_pair">Pair</string>
    <string name="pairing_pin_hint">Enter Pin</string>
    <string name="pink_theme">Pink Theme</string>
    <string name="privacy_policy">Click here to see our <b>PRIVACY POLICY</b></string>
    <string name="textview_header">Information</string>
    <string name="title_activity_select_theme">Select Theme</string>
</resources>