<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/app_icon_consent" android:background="@mipmap/ic_launcher" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <LinearLayout android:orientation="vertical" android:id="@id/ll_textviews_consent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:layout_below="@id/app_icon_consent" android:layout_centerHorizontal="true">
                <TextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/consent_1" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/consent_2" />
            </LinearLayout>
            <Button android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:id="@id/personalized" android:background="@drawable/oval_button" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/consent_4" android:layout_below="@id/ll_textviews_consent" android:layout_centerHorizontal="true" android:textAllCaps="false" />
            <Button android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:id="@id/non_personalized" android:background="@drawable/oval_button" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/consent_5" android:layout_below="@id/personalized" android:layout_centerHorizontal="true" android:textAllCaps="false" />
            <Button android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:id="@id/premium" android:background="@drawable/oval_button" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/consent_6" android:layout_below="@id/non_personalized" android:layout_centerHorizontal="true" android:textAllCaps="false" />
            <TextView android:gravity="center" android:id="@id/consent_3" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/consent_3" android:layout_below="@id/premium" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
            <TextView android:textSize="12.0sp" android:textStyle="italic" android:textColor="@color/colorPrimaryDark" android:id="@id/privacy_policy_consent" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/privacy_policy" android:layout_below="@id/consent_3" android:paddingStart="15.0dip" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>