<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="#ffa5a4a4" android:layout_width="fill_parent" android:layout_height="350.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="270.0dip">
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:padding="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_third_text" />
        <EditText android:gravity="top" android:id="@id/edittext_review_3" android:background="#ffe9e9e9" android:padding="10.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="250.0dip" android:layout_margin="10.0dip" android:hint="@string/layout_third_hint" android:maxLines="2" />
    </LinearLayout>
    <Button android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@id/btnSubmit_3" android:background="@drawable/oval_button_yellow_rating_system" android:layout_width="180.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/layout_first_second_submit" />
</LinearLayout>