<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#ffcccbcb" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="#ffffc107" android:gravity="center" android:id="@id/textView_header" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_margin="3.0dip" android:text="@string/textview_header" android:textIsSelectable="false" android:textAlignment="inherit" />
    <ScrollView android:id="@id/scrollview_info_activity" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/textView_header">
        <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/textView" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/first_screen_text" android:textIsSelectable="false" android:textAlignment="inherit" />
    </ScrollView>
    <Button android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/button_customer_support" android:background="@drawable/oval_button_yellow_rating_system" android:layout_width="230.0dip" android:layout_height="60.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/customer_support_rating" android:layout_below="@id/scrollview_info_activity" android:layout_centerHorizontal="true" android:textAllCaps="false" />
</RelativeLayout>