<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="?my_theme_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="35.0sp" android:textStyle="bold" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/textView12" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/title_activity_select_theme" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip">
                <ImageButton android:id="@id/imageButton" android:background="@drawable/resource_theme_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/black_theme" />
                <TextView android:layout_gravity="center_horizontal" android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="10.0dip" android:text="@string/black_theme" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip">
                <ImageButton android:id="@id/imageButton2" android:background="@drawable/resource_theme_button_choco" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/choco_theme" />
                <TextView android:layout_gravity="center_horizontal" android:id="@id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="10.0dip" android:text="@string/choco_theme" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip">
                <ImageButton android:id="@id/imageButton3" android:background="@drawable/resource_theme_button_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/grey_theme" />
                <TextView android:layout_gravity="center_horizontal" android:id="@id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="10.0dip" android:text="@string/grey_theme" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="15.0dip">
                <ImageButton android:id="@id/imageButton4" android:background="@drawable/resource_theme_button_pink" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/pink_theme" />
                <TextView android:layout_gravity="center_horizontal" android:id="@id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginBottom="10.0dip" android:text="@string/pink_theme" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>